--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "format": "prettier --write \"src/**/*.js\"",
     "lint": "prettier --check \"src/**/*.js\"",
     "pre-commit": "pretty-quick --staged",
-    "install:husky": "husky install"
+    "install:husky": "husky install",
+    "homepage": "https://Miike0.github.io/Avocados-little-shop"
   },
   "devDependencies": {
     "husky": "7",
